--- a/DockerFile
+++ b/DockerFile
@@ -9,3 +9,9 @@ COPY . .
 RUN apt-get install maven -y
 
 RUN mvn clean install
+
+EXPOSE 8080
+
+COPY --from=build /target/todolist-1.0.0.jar app.jar
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
